# nanodart

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
example/: nanodart_example.dart
lib/: nanodart.dart
lib/src/: util.dart
lib/src/account/: account_coder.dart  account_type.dart  account_util.dart
lib/src/blocks/: state_block.dart
lib/src/crypto/: blake2b.dart  tweetnacl_blake2b.dart
lib/src/encrypt/: crypter.dart
lib/src/encrypt/aes/: aes_cbcpkcs7.dart
lib/src/encrypt/kdf/: kdf.dart  pbkdf2_kdf.dart  sha256_kdf.dart
lib/src/ffi/: CMakeLists.txt  ed25519_blake2b.c  ed25519_blake2b.dart  libblake2b.dylib  libed25519_blake2b.1.0.0.dylib  libed25519_blake2b.1.dylib  libed25519_blake2b.dylib  macos_env.sh
lib/src/ffi/c/: CMakeLists.txt  ed25519_blake2b.c  libed25519_blake2b.1.0.0.dylib
lib/src/ffi/c/ed25519-donna/: blake2_common.h  ed25519-hash-custom-blake2b.h  ed25519-hash-custom.h  ed25519.c  ed25519.h  memzero.c  memzero.h
lib/src/ffi/ed25519-donna/: ed25519.c  ed25519.h
lib/src/keys/: keys.dart  mnemonics.dart  seeds.dart
lib/src/signing/: signer.dart
test/: nanodart_test.dart
